Updated Email Distribution and Application version
Updated Email Distribution and Application version

--- a/app/views/1-8-7/ALLF.html
+++ b/app/views/1-8-7/ALLF.html
@@ -21,7 +21,7 @@
         <a class="govuk-breadcrumbs__link" href="dashboard">Home</a>
       </li>
       <li class="govuk-breadcrumbs__list-item" aria-current="page">
-        <a class="govuk-breadcrumbs__link" href="reference-data-dashboard">Reference data</a>
+        <a class="govuk-breadcrumbs__link" href="period-end-dashboard">Period end</a>
       </li>
       <li class="govuk-breadcrumbs__list-item" aria-current="page">
         ALLF
@@ -33,7 +33,9 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds govuk-!-margin-top-6">
         <h1 class="govuk-heading-xl">ALLF reference data<span class="govuk-caption-m">Current Return number <span class="govuk-!-font-weight-bold">A55</span> Open until <span class="govuk-!-font-weight-bold">17 Mar 2020</span></span></h1>
-
+      </div>
+      <div class="govuk-grid-column-one-third govuk-!-margin-top-7">
+        <span class="govuk-!-font-size-19" ><a class="govuk-button govuk-button--secondary" href="ALLF-history">ALLF History</a></span>
       </div>
     </div>
     <div class="govuk-grid-row">
@@ -53,7 +55,7 @@
               <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
             </div>
             <p>
-              <a href="#"  class="govuk-button yes-pause">Upload</a> &nbsp; &nbsp;<a href="period-end" class="govuk-link cancel-pause">Cancel</a></p>
+              <a href="#"  class="govuk-button yes-pause">Upload</a> </p>
           </div>
         </details>
       </div>
@@ -63,20 +65,14 @@
         <table class="govuk-table">
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-              <th scope="col" class="govuk-table__header govuk-width-15">Date</th>
-              <th scope="col" class="govuk-table__header">Submitted by</th>
               <th scope="col" class="govuk-table__header">File</th>
-              <th scope="col" class="govuk-table__header">Return</th>
               <th scope="col" class="govuk-table__header govuk-width-17">Status</th>
               <th scope="col" class="govuk-table__header">Reports</th>
             </tr>
           </thead>
           <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">20 January 2020 at 15:22pm</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
               <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A55</td>
               <td class="govuk-table__cell govuk-!-font-weight-bold">
                 <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
                 <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
@@ -85,172 +81,16 @@
               <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
             </tr>
             <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">16 December 2019 at 8:00:12am</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A54</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">14 November 2019 at 8:00:12am</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A53</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">19 October 2019 at 1:00pm	</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A52</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">18 September 2019 at 1:00pm	</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A51</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">17 August 2019 at 1:00pm	</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A50</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">15 July 2019 at 1:00pm	</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A49</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">18 June 2019 at 1:00pm	</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A48</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">23 May 2019 at 1:00pm	</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A48</td>
+              <td class="govuk-table__cell"><a href="#"></a></td>
               <td class="govuk-table__cell govuk-!-font-weight-bold"><span class="red-font">Job failed</span></td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">20  April 2019 at 1:00pm	</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A47</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">13 March 2019 at 1:00pm	</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A46</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">12 February 2019 at 1:00pm	</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A45</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">18 January 2019 at 1:00pm	</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A44</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">17 December 2018 at 1:00pm</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A43</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
-              <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">17 November 2018 at 1:00pm</th>
-              <td class="govuk-table__cell">Lynne BURDON</td>
-              <td class="govuk-table__cell"><a href="#">ALLF-20200217-122234.csv</a></td>
-              <td class="govuk-table__cell">A42</td>
-              <td class="govuk-table__cell govuk-!-font-weight-bold">
-                <p class="green-font govuk-!-margin-bottom-1 govuk-!-font-weight-bold">Job finished</p>
-                <p class="govuk-!-margin-bottom-1 govuk-!-font-weight-bold">23189 records</p>
-                <p class="govuk-!-margin-bottom-0 govuk-!-font-weight-bold">235 Warnings</p>
-              </td>
               <td class="govuk-table__cell"><a href="#">ALLFRD-202001051533-validation-report-20200101120523.CSV</a></td>
             </tr>
 
           </tbody>
         </table>
+        <p>
+          <a href="#"  class="govuk-button yes-pause">Start period end</a>
+        </p>
       </div>
     </div>
   </main>
