--- a/app/views/1-8-7/email-dist-removed.html
+++ b/app/views/1-8-7/email-dist-removed.html
@@ -24,7 +24,19 @@
   </ol>
 </div>
 <br>
-
+<br>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+      <div class="govuk-banner govuk-banner--success">
+        <svg class="govuk-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
+        <path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" /></svg>
+        <div class="govuk-banner__message">
+          <span class="govuk-banner__assistive">Success</span>
+          You have successfully deleted DCT mailing list.
+        </div>
+    </div>
+  </div>
+</div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Manage distribution list</h1>
@@ -43,16 +55,6 @@
 
   <!-- <h2 class="govuk-heading-m">DCT mailing list</h2> -->
   <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-    <div class="govuk-summary-list__row">
-      <dd class="govuk-summary-list__value">
-        PETest01
-      </dd>
-      <dd class="govuk-summary-list__actions">
-        <a class="govuk-link" href="DCT-mail-list">
-          Manage list<span class="govuk-visually-hidden"> Manage DCT list</span>
-        </a>
-      </dd>
-    </div>
     <div class="govuk-summary-list__row">
       <dd class="govuk-summary-list__value">
         PETest02
