--- a/app/views/1-8-7/period-end-dashboard.html
+++ b/app/views/1-8-7/period-end-dashboard.html
@@ -42,7 +42,7 @@
               </li>
               <li>
                 <h3 class="home-services__heading">
-                  <a href="application-version" class="govuk-link">Application version</a>
+                  <a href="app-version" class="govuk-link">Application version</a>
                 </h3>
                 <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1">Last update</p>
                 <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">1 January 2020 at 12:04pm</p>
@@ -53,14 +53,14 @@
       <div class="govuk-grid-column-one-third">
         <ul class="govuk-list">
           <li>
-            <h3 class="home-services__heading"><a href="ILR" class="govuk-link">ILR</a></h3>
+            <h3 class="home-services__heading"><a href="period-end" class="govuk-link">ILR</a></h3>
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1"><span class="govuk-!-font-weight-bold">R06</span> open until</p>
             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-7">22 July 2020 18:05pm</p>
           </li>
 
 
           <li>
-            <h3 class="home-services__heading"><a href="email-distribution" class="govuk-link">Email distribution</a></h3>
+            <h3 class="home-services__heading"><a href="email-dist" class="govuk-link">Email distribution</a></h3>
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1">Last update</p>
             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">1 January 2020 at 12:04pm</p>
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-7">by Lynne BURDON</p>
