--- a/app/views/1-8-7/period-end.html
+++ b/app/views/1-8-7/period-end.html
@@ -15,7 +15,7 @@
 <br>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Period end preparation
+    <h1 class="govuk-heading-xl">ILR - Period end preparation
     <span class="govuk-caption-l">R06 open until 22-07-19 18:05
       <!-- <a href="manage-R06">Close collection</a> -->
     </span>
@@ -28,12 +28,6 @@
   <div class="govuk-grid-column-one-third">
     <ul class="govuk-list">
 
-      <li>
-        <a href="app-version" class="govuk-link">Application version</a>
-      </li>
-      <li>
-        <a href="email-dist" class="govuk-link">Email distribution</a>
-      </li>
       <li>
         <div class="flex"><a href="period-end-reports" class="govuk-link ">Reports </a></div>
       </li>
