--- a/app/views/1-8-7/remove-mailing-list.html
+++ b/app/views/1-8-7/remove-mailing-list.html
@@ -11,19 +11,35 @@
 
 <!-- <script src="/public/javascripts/tt.js"></script> -->
 
-<a id="backlink" href="#" class="govuk-back-link">Back</a>
+<div class="govuk-breadcrumbs">
+  <ol class="govuk-breadcrumbs__list">
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="dashboard">Home</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="period-end-dashboard">Period end</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="email-dist">Email distribution</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item" aria-current="page">
+      <a class="govuk-breadcrumbs__link" href="DCT-mail-list">Manage list</a></li>
+      <li class="govuk-breadcrumbs__list-item" aria-current="page">Remove</li>
+
+  </ol>
+</div>
 <br>
 <br>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Remove mailing list</h1>
 
-    <p>Are you sure you want to remove the <strong>Apprenticeships</strong> mailing list?</p>
+    <p>Are you sure you want to remove the <strong>DCT</strong> mailing list?</p>
 
-  <a href="mailing-list-removed" class="govuk-button">
+  <a href="email-dist-removed" class="govuk-button">
     Remove list
   </a>
-  <p><a href="email-dist">Cancel</a></p>
+  <p><a href="DCT-mail-list">Cancel</a></p>
   </div>
 </div>
 
