--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -1270,6 +1270,180 @@ html {
 
   }
 
+
+/* MODAL DIALOG
+   ============================================================================*/
+
+   #modal-dialogue-example #modal {
+       position: absolute;
+       z-index: 10;
+       top: 30.6px;
+       bottom: 0;
+       left: 0;
+       right: 0;
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
+     }
+     #modal-dialogue-example #modal-content {
+       position: relative;
+       background: #fff;
+       font-weight: bold;
+       font-size: 16px;
+       line-height: 20px;
+       color: #000;
+       padding: 15px;
+       box-shadow: 0 5px 0 rgba(0,0,0,0.1);
+       max-width: 380px;
+       box-sizing: border-box;
+     }
+     #modal-dialogue-example .close-modal {
+       position: absolute;
+       overflow: hidden;
+       width: 40px;
+       height: 30px;
+       padding: 9px 0 1px;
+       top: 0;
+       right: 0;
+       color: #000;
+       font-size: 30px;
+       text-decoration: none;
+       text-align: center;
+       line-height: 30px;
+     }
+     #modal-dialogue-example #modal-content h2 {
+       font-size: 24px;
+       line-height: 30px;
+       margin: 10px 0;
+       font-weight: bold;
+     }
+     #modal-dialogue-example #modal-content p {
+       margin: 0;
+     }
+     #modal-dialogue-example #modal-content .actions {
+       margin-top: 15px;
+     }
+     #modal-dialogue-example #modal-content .actions button {
+       color: #000;
+       background: white;
+       border: none;
+       font-family: inherit;
+       font-weight: bold;
+       line-height: 30px;
+       padding: 6px 10px 4px;
+       margin-right: 10px;
+       font-size: 16px;
+       cursor: pointer;
+     }
+     #modal-dialogue-example #modal-content .actions a {
+       color: white;
+       text-decoration: underline;
+     }
+     #modal-dialogue-example .close-modal:hover {
+       background: #4C2C92;
+     }
+     #modal-dialogue-example .close-modal:focus {
+       background: orange;
+       outline: none;
+     }
+     #modal-dialogue-example .close-modal span {
+       position: absolute;
+       top: -100px;
+       left: -1000%;
+     }
+     #modal-dialogue-example:target #modal-content {
+       display: none;
+     }
+
+
+  /* CUSTOM BANNERS
+     ========================================================================== */
+     .govuk-banner {
+       border: 5px solid #1d70b8;
+       color: #1d70b8;
+       font-size: 0;
+       margin-bottom: 30px;
+       padding: 10px;
+     }
+  .govuk-banner--success {
+    border-color: #00703c;
+    color: #00703c;
+  }
+  .govuk-banner--success {
+    border-color: #00703c;
+    color: #00703c;
+  }
+
+  .govuk-banner--warning {
+    border-color: #d4351c;
+    color: #d4351c;
+  }
+  .govuk-banner__message {
+    font-family: "GDS Transport", Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-weight: 400;
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.25;
+    color: #0b0c0c;
+    display: block;
+    overflow: hidden;
+  }
+  /* ==========================================================================
+     #ALERT
+     ========================================================================== */
+
+
+  .govuk-banner__icon {
+    fill: currentColor;
+    float: left;
+    margin-right: 10px;
+  }
+
+  .govuk-banner__message {
+    font-family: "GDS Transport", Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-weight: 400;
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.25;
+    color: #0b0c0c;
+    display: block;
+    overflow: hidden;
+  }
+  .govuk-banner--warning {
+    border-color: #d4351c;
+    color: #d4351c;
+  }
+  .govuk-banner__message h2 {
+    margin-bottom: 10px;
+  }
+
+  .govuk-banner__message h2:last-child {
+    margin-bottom: 0;
+  }
+
+  .govuk-banner__message p:last-child {
+    margin-bottom: 0;
+  }
+
+  .govuk-banner__assistive {
+    position: absolute !important;
+    width: 1px !important;
+    height: 1px !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    overflow: hidden !important;
+    clip: rect(0 0 0 0) !important;
+    -webkit-clip-path: inset(50%) !important;
+    clip-path: inset(50%) !important;
+    border: 0 !important;
+    white-space: nowrap !important;
+  }
+
   #left-nav-wrapper {
 
 	ul {
@@ -1550,4 +1724,13 @@ html {
 }
 .inline-display {
   display: inline !important; float: left;
+}
+.govuk-checkboxes__input-custom {
+  width: 22px; height:22px;
+  border: 2px solid #000;
+}
+
+.checkbox123 {border: 1px solid red}
+.checkbox #checkbox_1[type="checkbox"] {
+    opacity: 0; display:none;
 }
