--- a/app/views/1-8-7/email-dist-new-list.html
+++ b/app/views/1-8-7/email-dist-new-list.html
@@ -24,10 +24,22 @@
   </ol>
 </div>
 <br>
-
+<form action="" method="post"  id="emailDistributionList">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+      <div class="govuk-banner govuk-banner--success">
+        <svg class="govuk-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
+        <path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" /></svg>
+        <div class="govuk-banner__message">
+          <span class="govuk-banner__assistive">Success</span>
+          You have successfully added <strong>{{ data['mailing-list'] }}</strong> email distribution list.
+        </div>
+    </div>
+  </div>
+</div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">Manage distribution list</h1>
+    <h1 class="govuk-heading-xl">Manage email distribution list</h1>
 
 
     <div class="flex space-between">
@@ -124,13 +136,20 @@
         </a>
       </dd>
     </div>
-
+    <div class="govuk-summary-list__row">
+      <dd class="govuk-summary-list__value">
+        {{ data['mailing-list'] }}
+      </dd>
+      <dd class="govuk-summary-list__actions">
+        <a class="govuk-link" href="">
+          Manage list<span class="govuk-visually-hidden"> Manage apprenticeship list</span>
+        </a>
+      </dd>
+    </div>
 
 
   </dl>
-
-
-
+</form>
 
 
 
